--- a/Música/recursos.html
+++ b/Música/recursos.html
@@ -296,7 +296,7 @@ E|---|---|---|---|---||---|---|---|---|---||---|---|---|---|---||---|---|---|---
 
 					<pre><code>
 
-  <b>P. Inversi&oacute;n     E. Fundamental   S. inversi&oacute;n     P. inversi&oacute;n</b>
+  <b>S. inversi&oacute;n     P. Inversi&oacute;n     E. Fundamental   S. inversi&oacute;n</b>
 
 e|-2-|---|---|---||---|---|---|---||---|---|---|---||---|---|---|---|
 B|---|-<strong>3</strong>-|---|---||---|-<strong>2</strong>-|---|---||---|---|---|---||---|---|---|---|
