Revert "Hoja de estilos referenciada online. Correción."
This reverts commit 80ab93f4c7078f80378bf5d23ccba328f53242b6.

--- a/music/inversiones.html
+++ b/music/inversiones.html
@@ -4,10 +4,8 @@
 
 		<title>Inversiones en tr&iacute;adas</title>
 
-		<LINK REL=StyleSheet HREF="https://github.com/NoQu4rter/rutas_de_aprendizaje/blob/master/music/style.css" type="text/css" media="screen"/>
+		<LINK REL=StyleSheet HREF="style.css" type="text/css" media="screen"/>
 
-		<!-- https://github.com/NoQu4rter/rutas_de_aprendizaje/blob/master/music/style.css -->
-		
 		</head>
 
 	<body>
