Nuevo trabajo en fuentes.

--- a/music/arpegios.html
+++ b/music/arpegios.html
@@ -20,7 +20,7 @@
 
 					<li>
 
-						6xta cuerda, dedo 1
+						<span>6xta cuerda, dedo 1</span>
 
 						</li>
 
@@ -45,7 +45,7 @@ E|-<b class="F">1</b>-|---|---|---|-<b class="T">4</b>-|
 
 					<li>
 
-						6xta cuerda, dedo 2
+						<span>6xta cuerda, dedo 2</span>
 
 						</li>
 
@@ -70,7 +70,7 @@ E|---|-<b class="F">2</b>-|---|---|
 
 					<li>
 
-						6xta cuerda, dedo 3
+						<span>6xta cuerda, dedo 3</span>
 
 						</li>
 
@@ -95,7 +95,7 @@ E|---|---|---|-<b class="F">3</b>-|---|
 
 					<li>
 
-						6xta cuerda, dedo 4
+						<span>6xta cuerda, dedo 4</span>
 
 						</li>
 
@@ -124,7 +124,7 @@ E|---|---|---|-<b class="F">4</b>-|---|
 
 					<li>
 
-						5ta cuerda, dedo 1
+						<span>5ta cuerda, dedo 1</span>
 
 						</li>
 
@@ -149,7 +149,7 @@ E|---|---|---|---|---|
 
 					<li>
 
-						5ta cuerda, dedo 2
+						<span>5ta cuerda, dedo 2</span>
 
 						</li>
 
@@ -174,7 +174,7 @@ E|---|---|---|---|
 
 					<li>
 
-						5ta cuerda, dedo 4
+						<span>5ta cuerda, dedo 4</span>
 
 						</li>
 
@@ -203,7 +203,7 @@ E|---|---|---|---|
 
 					<li>
 
-						4ta cuerda, dedo 1
+						<span>4ta cuerda, dedo 1</span>
 
 						</li>
 
@@ -253,7 +253,7 @@ E|---|---|---|---|---|
 
 					<li>
 
-						<span>6xta cuerda, dedo 2</span>
+						<span>4ta cuerda, dedo 4</span>
 
 						</li>
 
@@ -282,7 +282,7 @@ E|---|---|---|---|
 
 					<li>
 
-						3ra cuerda, dedo 1 (1)
+						<span>3ra cuerda, dedo 1 (1)</span>
 
 						</li>
 
@@ -307,7 +307,7 @@ E|---|---|---|---|---|
 
 					<li>
 
-						3ra cuerda, dedo 1 (2)
+						<span>3ra cuerda, dedo 1 (2)</span>
 
 						</li>
 
@@ -332,7 +332,7 @@ E|---|---|---|---|
 
 					<li>
 
-						3ra cuerda, dedo 2
+						<span>3ra cuerda, dedo 2</span>
 
 						</li>
 
