--- a/music/inversiones.html
+++ b/music/inversiones.html
@@ -20,7 +20,7 @@
 
 					<li>
 
-						Zona 1
+						<span>Zona 1</span>
 
 						</li>
 
@@ -52,7 +52,7 @@ E|---|---|---|---|---|---||---|---|---|---|---|---||---|---|---|---|---|---||---
 
 					<li>
 
-						Zona 2
+						<span>Zona 2</span>
 
 						</li>
 
@@ -85,7 +85,7 @@ E|---|---|---|---|---||---|---|---|---|---||---|---|---|---|---||---|---|---|---
 
 					<li>
 
-						Zona 3
+						<span>Zona 3</span>
 
 						</li>
 
