--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
 
 	<head>
 
-		<title>Recursos para guitarra<title>
+		<title>Recursos para guitarra</title>
 
 		<LINK REL=StyleSheet HREF="style.css" type="text/css" media="screen"/>
 
