tr&iacute;adas link

--- a/music/index.html
+++ b/music/index.html
@@ -16,7 +16,7 @@
 
 		<ui>
 
-			<li><a href="inversiones.html">Inversiones en tríadas</a></li>
+			<li><a href="inversiones.html">Inversiones en tr&iacute;adas</a></li>
 
 			</ui>
 
